tket2-hseries/src/llvm/snapshots/tket2_hseries__llvm__futures__test__emit_futures_codegen@llvm14_1.snap
---
source: tket2-hseries/src/llvm/futures.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i1 @_hl.main.1(i64 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %read_bool = call i1 @___read_future_bool(i64 %0)
  call void @___dec_future_refcount(i64 %0)
  %measure = select i1 %read_bool, i1 true, i1 false
  ret i1 %measure
}

declare i1 @___read_future_bool(i64)

declare void @___dec_future_refcount(i64)
