tket2-hseries/src/llvm/snapshots/tket2_hseries__llvm__futures__test__emit_futures_codegen@llvm14_4.snap
---
source: tket2-hseries/src/llvm/futures.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1(i64 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %read_uint = call i64 @___read_future_uint(i64 %0)
  call void @___dec_future_refcount(i64 %0)
  ret i64 %read_uint
}

declare i64 @___read_future_uint(i64)

declare void @___dec_future_refcount(i64)
